# piql

./: .gitignore  CLAUDE.md  Cargo.toml  README.md
.claude/: settings.local.json
crates/piql/: Cargo.toml
crates/piql-http/: Cargo.toml  README.md
crates/piql-http/src/: files.rs  handlers.rs  llm.rs  main.rs  state.rs
crates/piql-serve/: Cargo.toml
crates/piql-serve/examples/: gen_data.rs  serve_parquet.rs
crates/piql-serve/src/: io.rs  lib.rs  protocol.rs  server.rs  util.rs
crates/piql-serve/tests/: server_integration.rs
crates/piql-server/: Cargo.toml
crates/piql-server/src/: core.rs  error.rs  http.rs  ipc.rs  lib.rs  llm.rs  loader.rs  runs.rs  sse.rs  state.rs  watcher.rs
crates/piql/benches/: hot_paths.rs
crates/piql/src/: engine.rs  eval.rs  lib.rs  parse.rs  pretty.rs  sugar.rs  transform.rs
crates/piql/src/ast/: core.rs  surface.rs
crates/piql/tests/: integration.rs  parquet_explore.rs  property.rs
src/: engine.rs  eval.rs  lib.rs  parse.rs  sugar.rs  transform.rs
src/ast/: core.rs  mod.rs  surface.rs
tests/: integration.rs
