[package]
name = "piql"
version = "0.1.0"
edition = "2024"

[dependencies]
polars = { version = "0.46", features = [
    "lazy",
    "strings",
    "temporal",
    "dtype-date",
    "dtype-datetime",
    "rolling_window",
    "rank",
    "is_between",
    "diff",
    "abs",
    "round_series",
    "cum_agg",
    "regex",
] }
thiserror = "2"
log = "0.4"
winnow = "0.7"
indexmap = "2"
