[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
edition = "2024"

[workspace.dependencies]
polars = { version = "0.52.0", features = [
    "lazy",
    "strings",
    "temporal",
    "dtype-date",
    "dtype-datetime",
    "rolling_window",
    "rank",
    "is_between",
    "diff",
    "abs",
    "round_series",
    "cum_agg",
    "regex",
    "parquet",
    "csv",
    "ipc_streaming",
    "ipc",
    "timezones",
] }
thiserror = "2"
log = "0.4"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.28"
futures = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
