[package]
name = "piql-serve"
version = "0.1.0"
edition.workspace = true

[dependencies]
piql = { path = "../piql" }
polars.workspace = true
thiserror.workspace = true
log.workspace = true
tokio.workspace = true
tokio-tungstenite.workspace = true
futures.workspace = true
serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
tokio-tungstenite.workspace = true
futures.workspace = true
