[package]
name = "piql-server"
version = "0.1.0"
edition.workspace = true

[features]
default = ["full"]
llm = ["reqwest"]
file-watcher = ["notify"]
full = ["llm", "file-watcher"]

[dependencies]
piql = { path = "../piql" }
polars.workspace = true
tokio.workspace = true
thiserror.workspace = true
log.workspace = true
serde.workspace = true
serde_json.workspace = true

# HTTP
axum = { version = "0.8", features = ["macros"] }
tower-http = { version = "0.6", features = ["cors"] }

# OpenAPI
utoipa = { version = "5", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "9", features = ["axum"] }

# Optional: LLM
reqwest = { version = "0.12", features = ["json"], optional = true }

# Optional: File watching
notify = { version = "7", default-features = false, features = ["macos_kqueue"], optional = true }

# CLI (for binary)
clap = { version = "4", features = ["derive"] }
anyhow = "1"

# Logging
env_logger = "0.11"

# SSE
tokio-stream = { version = "0.1", features = ["sync"] }
futures = "0.3"

# Base64 for SSE payloads
base64 = "0.22"

[[bin]]
name = "piql-server"
path = "src/bin/piql-server.rs"
