[package]
name = "piql"
version = "0.1.0"
edition.workspace = true

[dependencies]
polars.workspace = true
polars-ops = { version = "0.52.0", features = ["round_series"] }
thiserror.workspace = true
log.workspace = true
winnow = "0.7"
indexmap = "2"

[dev-dependencies]
proptest = "1"
criterion = "0.5"

[[bench]]
name = "hot_paths"
harness = false
